Export wall items
Signed-off-by: WiredSpast <wiredspast@gmail.com>