@@ -4,7 +4,8 @@ import extension.tools.postconfig.FurniPostConfig;
 import extension.tools.postconfig.PostConfig;
 import extension.tools.presetconfig.ads_bg.PresetAdsBackground;
 import extension.tools.presetconfig.binding.PresetWiredFurniBinding;
-import extension.tools.presetconfig.furni.PresetFurni;
+import extension.tools.presetconfig.furni.PresetFloorFurni;
+import extension.tools.presetconfig.furni.PresetWallFurni;
 import extension.tools.presetconfig.wired.PresetWireds;
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -17,21 +18,27 @@ import java.util.stream.Collectors;
 
 public class PresetConfig implements PresetJsonConfigurable {
 
-    private List<PresetFurni> furniture;
+    private List<PresetFloorFurni> floorFurniture;
+    private List<PresetWallFurni> wallFurniture;
     private PresetWireds presetWireds;
     private List<PresetWiredFurniBinding> bindings;
     private List<PresetAdsBackground> adsBackgrounds;
 
-    public PresetConfig(List<PresetFurni> furniture, PresetWireds presetWireds, List<PresetWiredFurniBinding> bindings, List<PresetAdsBackground> adsBackgrounds) {
-        this.furniture = furniture;
+    public PresetConfig(List<PresetFloorFurni> floorFurniture, List<PresetWallFurni> wallFurniture, PresetWireds presetWireds, List<PresetWiredFurniBinding> bindings, List<PresetAdsBackground> adsBackgrounds) {
+        this.floorFurniture = floorFurniture;
+        this.wallFurniture = wallFurniture;
         this.presetWireds = presetWireds;
         this.bindings = bindings;
         this.adsBackgrounds = adsBackgrounds;
     }
 
     public PresetConfig(JSONObject object) {
-        furniture = object.getJSONArray("furni").toList().stream()
-                .map(o -> new PresetFurni(new JSONObject((Map)o))).collect(Collectors.toList());
+        floorFurniture = object.getJSONArray("furni").toList().stream()
+                .map(o -> new PresetFloorFurni(new JSONObject((Map)o))).collect(Collectors.toList());
+
+        wallFurniture = !object.has("wallFurni") ? new ArrayList<>() :
+                object.getJSONArray("wallFurni").toList().stream()
+                .map(o -> new PresetWallFurni(new JSONObject((Map)o))).collect(Collectors.toList());
 
         presetWireds = new PresetWireds(object.getJSONObject("wired"));
 
@@ -47,10 +54,12 @@ public class PresetConfig implements PresetJsonConfigurable {
     public JSONObject toJsonObject() {
         JSONObject object = new JSONObject();
 
-        JSONArray jsonFurni = new JSONArray(furniture.stream().map(PresetFurni::toJsonObject).collect(Collectors.toList()));
+        JSONArray jsonFurni = new JSONArray(floorFurniture.stream().map(PresetFloorFurni::toJsonObject).collect(Collectors.toList()));
+        JSONArray jsonWallFurni = new JSONArray(wallFurniture.stream().map(PresetWallFurni::toJsonObject).collect(Collectors.toList()));
         JSONArray jsonBindings = new JSONArray(bindings.stream().map(PresetWiredFurniBinding::toJsonObject).collect(Collectors.toList()));
 
         object.put("furni", jsonFurni);
+        object.put("wallFurni", jsonWallFurni);
         object.put("wired", presetWireds.toJsonObject());
         object.put("bindings", jsonBindings);
         if (!adsBackgrounds.isEmpty()) {
@@ -67,13 +76,13 @@ public class PresetConfig implements PresetJsonConfigurable {
 
         // apply global classname mapper
         // apply useExistingFurni
-        for (int i = furniture.size() - 1; i >= 0 ; i--) {
-            PresetFurni p = furniture.get(i);
+        for (int i = floorFurniture.size() - 1; i >= 0 ; i--) {
+            PresetFloorFurni p = floorFurniture.get(i);
             FurniPostConfig c = postConfig.getFurniPostConfig(p.getFurniName());
 //            furniIdMap.put(p.getFurniId(), -1);
             if (c != null && c.isUseExistingFurni()) {
                 furniIdMap.put(p.getFurniId(), c.getExistingFurniId());
-                furniture.remove(i);
+                floorFurniture.remove(i);
             }
             else if (postConfig.getClassMapping(p.getClassName()) != null) {
                 p.setClassName(postConfig.getClassMapping(p.getClassName()));
@@ -84,12 +93,20 @@ public class PresetConfig implements PresetJsonConfigurable {
         return furniIdMap;
     }
 
-    public List<PresetFurni> getFurniture() {
-        return furniture;
+    public List<PresetFloorFurni> getFloorFurniture() {
+        return floorFurniture;
     }
 
-    public void setFurniture(List<PresetFurni> furniture) {
-        this.furniture = furniture;
+    public void setFloorFurniture(List<PresetFloorFurni> furniture) {
+        this.floorFurniture = furniture;
+    }
+
+    public List<PresetWallFurni> getWallFurniture() {
+        return wallFurniture;
+    }
+
+    public void setWallFurniture(List<PresetWallFurni> furniture) {
+        this.wallFurniture = furniture;
     }
 
     public PresetWireds getPresetWireds() {
